# SchiffeVersenken

./: CMakeLists.txt
src/: Board.cpp  Board.hpp  Cheating_player.cpp  Cheating_player.hpp  GameController.cpp  GameController.hpp  Human_player.cpp  Human_player.hpp  Player.cpp  Player.hpp  Random_player.cpp  Random_player.hpp  SchiffeVersenken.cpp  Tournament.cpp  board.test.cpp  cheating_player.test.cpp  human_player.test.cpp  random_player.test.cpp  util.test.cpp  util.test.hpp
